--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: "Poppins" sans-serif;
+  font-family: "Poppins", sans-serif;
 }
 :root {
   --clr: rgb(255, 0, 174);
@@ -99,4 +99,47 @@ body {
     transform-origin: bottom;
     text-shadow: -180px 0 0 var(--clr), 180px 0 0 var(--clr);
   }
+}
+
+/* Media query for screens smaller than 600px */
+@media (max-width: 600px) {
+  .container {
+    top: 20px;
+    height: auto;
+    padding: 10px;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .container .cloud {
+    width: 90%;
+    padding: 5px;
+  }
+
+  .container .cloud h2 {
+    font-size: 1.2em;
+    padding: 5px;
+  }
+
+  .container .cloud h2::before {
+    top: -60px;
+    height: 60px;
+  }
+
+  .container .cloud h2::after {
+    top: -80px;
+    left: 10px;
+    width: 60px;
+    height: 60px;
+    box-shadow: 60px -15px 0 20px var(--clr);
+  }
+
+  .container .cloud .drop {
+    top: 40px;
+    height: 15px;
+    line-height: 15px;
+  }
+}
+h3 {
+  color: pink;
 }
